update ipython file

--- a/Talbot Effect for Dispersive PDE.ipynb
+++ b/Talbot Effect for Dispersive PDE.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Talbot Effect for Dispersive PDEs\n",
     "\n",
-    "*an Illinois Geometry Lab project*\n",
+    "*Spring 2019 Illinois Geometry Lab project*\n",
     "\n",
     "Undergraduate researchers: Zhouzhen Cai, Wei-Chen Huang, Hui Lyu, and Spencer Rooke <br />\n",
     "Graduate Leader: George Shakan <br />\n",
