Update Talbot Effect for Dispersive PDE.ipynb

--- a/Talbot Effect for Dispersive PDE.ipynb
+++ b/Talbot Effect for Dispersive PDE.ipynb
@@ -44,10 +44,8 @@
     "where the solution to the linear part is\n",
     "\n",
     "$$\n",
-    "    u(x,t)=\\sum\\limits_{k=-\\infty}^{\\infty}e^{-itk^2}\\hat{g}(k)e^{ikx}\n",
-    "$$\n",
+    "    u(x,t)=\\sum\\limits_{k=-\\infty}^{\\infty}e^{-itk^2}\\hat{g}(k)e^{ikx} \\\\\n",
     "\n",
-    "$$\n",
     "        Nonlinear:= \\begin{cases}\n",
     "\t                iu_t+\\vert u \\vert^2u=0\\\\\n",
     "\t                u(x,0)=g(x)\n",
@@ -72,10 +70,8 @@
     "To use the **Split Step Method**, we can apply the linear and nonlinear solutions at small time steps and compose them to obtain the total solution:\n",
     "\n",
     "$$ \n",
-    "u(x, n \\Delta t) = F^{-1}[e^{-iw(k)\\Delta t}F(e^{i\\Delta t \\vert u(x,\\Delta t(n-1)) \\vert^{p=2}}u(x,\\Delta t(n-1))]\n",
-    "$$\n",
+    "u(x, n \\Delta t) = F^{-1}[e^{-iw(k)\\Delta t}F(e^{i\\Delta t \\vert u(x,\\Delta t(n-1)) \\vert^{p=2}}u(x,\\Delta t(n-1))] \\\\\n",
     "\n",
-    "$$ \n",
     "\\text{for}\\ n = 0,1,2,...,\\ \\text{given}\\ u(x,0)=u_0\n",
     "$$\n",
     "\n",
